# turborepo

./: Cargo.toml  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: test.yml  turborepo-release.yml
cli/integration_tests/find_turbo/: setup.sh
crates/next-dev-tests/tests/: package.json
crates/next-dev/src/: lib.rs
crates/node-file-trace/src/: lib.rs
crates/turbo-tasks/: Cargo.toml
crates/turbo-tasks-fs/src/: lib.rs
crates/turbo-tasks-memory/src/: lib.rs  memory_backend.rs  task.rs
crates/turbo-tasks-memory/src/aggregation_tree/: bottom_connection.rs
crates/turbo-tasks/src/: backend.rs  manager.rs
crates/turbo-tasks/src/task/: task_input.rs
crates/turbopack-cli/src/dev/: mod.rs
crates/turbopack-core/src/: environment.rs
crates/turbopack-css/src/: asset.rs  module_asset.rs
crates/turbopack-dev-server/src/source/: asset_graph.rs
crates/turbopack-ecmascript/src/: lib.rs
crates/turbopack-node/src/transforms/: postcss.rs  webpack.rs
crates/turbopack-tests/tests/: snapshot.rs
crates/turborepo-api-client/: Cargo.toml
crates/turborepo-api-client/src/: spaces.rs  telemetry.rs
crates/turborepo-cache/src/: lib.rs
crates/turborepo-db/: Cargo.toml
crates/turborepo-db/migrations/: 20240828183512_initial_tables.sql
crates/turborepo-db/src/: lib.rs
crates/turborepo-env/src/: lib.rs
crates/turborepo-lib/: Cargo.toml
crates/turborepo-lib/src/: config.rs  query.rs  task_hash.rs
crates/turborepo-telemetry/src/: lib.rs
docs/: package.json
turborepo-tests/integration/tests/: affected.t  command-query.t  turbo-trace.t
(+21 files in other folders)
