[package]
name = "turborepo-db"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
turbopath = { workspace = true }
turborepo-api-client = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
